# Dist_PromptRefiner

./: .gitignore  CMakeLists.txt
.serena/: project.yml
include/: cli_pcam_interface.h  geometric_interface.h  openmd_interface.h  orchestrator_interface.h  pattern_interface.h
include/geometric/interfaces/: decomposer_interface.h  region_interface.h
src/cli/: OWNERS.md  cli_parser.cpp  cli_parser.h  command_processor_impl.cpp  command_processor_impl.h
src/cli/formatters/: json_formatter.cpp  json_formatter.h
src/cli/validators/: idea_validator.cpp  idea_validator.h
src/geometric/: OWNERS.md  region_assigner.cpp  region_assigner.h  spatial_partitioner.cpp  spatial_partitioner.h
src/openmd/: OWNERS.md  binding.cpp  binding.h
src/openmd/errors/: error_codes.cpp  error_codes.h
src/openmd/mappers/: data_mapper.cpp  data_mapper.h
src/orchestrator/: OWNERS.md  agent_lifecycle.cpp  agent_lifecycle.h
src/orchestrator/communication/: grpc_protocol.h
src/orchestrator/resources/: token_bucket_manager.cpp  token_bucket_manager.h
src/patterns/: OWNERS.md  pattern_identifier.cpp  pattern_identifier.h
src/patterns/transformers/: pattern_transformer.cpp  pattern_transformer.h
src/patterns/verifiers/: pattern_verifier.cpp  pattern_verifier.h
src/pcam/: OWNERS.md  plan_decomposer.cpp  plan_decomposer.h
test/: CMakeLists.txt  basic_test.cpp
